<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M2M-Presence Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--                                      LAYOUT                                                -->
    <!--comunication_m2m_dm -->
    <string name="ipport_TextView">Ip:port:</string>
    <string name="default_ipport_editText">192.168.173.1:8080</string>
    <string name="device_TextView">device_name:</string>
    <string name="default_device_editText">test</string>
    <string name="datoTOsend_TextView">payload:</string>
    <string name="default_datoTOsend">time=1234</string>
    <string name="send_button">Send to DM2:</string>
    <string name="get_button">get from DM:</string>
    <string name="Data_send">Press to send data</string>
    <string name="Data_get">Press to get device storage dates</string>
    <!--activity_first_old -->
    <string name="first_text">It´s the first time you open this app. The storage structure should be build</string>
    <string name="button_Fill_Proyect">Fill Proyect data</string>
    <string name="button_Build">Build</string>
    <string name="Build_result">Not Building</string>
    <!--activity_first -->
    <string name="button_Start">Start</string>
    <string name="start_text">It´s the first time you open this app. You should change the SETTINGS:
                              \n
                              \nWork mode:
                              \n  1-Work like a INSTALLER(detect beacon and save associate text).(default)
                               \n  2-o like a USER(hear the associate text from a beacon wen you are near).
                               \n
                               \nStorage mode:
                               \n  1-LOCAL(default)
                               \n  2-or by external SERVER.
                               \nIf we select external server, we have to set the URL to send data(by http post method) and receive data(by http get method)</string>
    <!--activity_first_installer-->
    <string name="start_text_installer">It´s the first time you use this app like installer.
                                       \nYou should define the project where the beacons will be associate.</string>
    <string name="project_name_description">The project name has to be a unique short identifier.</string>
    <string name="project_name">PROJECT NAME:</string>
    <string name="default_project_name">Project_1</string>
    <string name="specification_name_description">You can save any text here.</string>
    <string name="specification_name">PROJECT SPECIFICATION:</string>
    <string name="default_project_specification">This is my first project </string>
    <!--activity_installer-->
    <string name="select_project_textView">SELECT PROJECT:</string>
    <string name="new_project_button">New project</string>
    <string name="find_ibeacon_button">Find i-beacon</string>
    <string name="white_line">                                                                                        </string>
    <string name="search_i_beacon_textView">Place the phone on i_beacon, click Scan, wait 5 seconds and select the i_beacon with the highest signal level. The latitude and longitude, also go to be put away</string>
    <string name="save_button">SAVE</string>
    <string name="device_specification">I_BEACON SPECIFICATION:</string>
    <string name="device_specification_description">Write the text to show to the users</string>
    <string name="default_device_specification">Elevator</string>
    <string name="data_validation">Data Validation:</string>
    <!--activity-and-service-for-user-->
    <string name="user_first_textView">Press the button to start ,the service detection of I_beacons.</string>
    <string name="can_detect_Ibeacon">I-BEACON DETECTION SERVICE INITIATED IN BACKGROUND.</string>
    <string name="service_stopped"> SERVICE STOPPED </string>
    <string name="user_second_textView">You can exit to the app. You will be notified of the presence of registered i-beacons, near of you.</string>
    <string name="can_not_detect_Ibeacon"> NOW YOU CAN NOT DETECT I-BEACONS </string>
    <string name="stop_service"> STOP SERVICE </string>
    <string name="start_service"> START SERVICE</string>
</resources>
