<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <!-- tools:context=".menu"-->
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipport_TextView"
            android:id="@+id/ip_TextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/default_ipport_editText"
            android:text="@string/default_ipport_editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_TextView"
            android:id="@+id/device_TextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/default_device_editText"
            android:text="@string/default_device_editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datoTOsend_TextView"
            android:id="@+id/datoTosend_TextView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datoTOsend_editText"
            android:text="@string/default_datoTOsend" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/send_button"
            android:id="@+id/send_button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Data_send"
            android:id="@+id/respuestaSEND_textView"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/get_button"
            android:id="@+id/get_button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Data_get"
            android:id="@+id/get_textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.22"/>

    </LinearLayout>

</ScrollView>
