<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <!-- tools:context=".menu"-->
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_project_textView"
        android:id="@+id/select_project_textView"
        android:layout_gravity="center_horizontal" />
    <Spinner
        android:id="@+id/projects_show_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/new_project_button"
        android:id="@+id/new_project_button"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/search_i_beacon_textView"
        android:id="@+id/get_textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2.22"
        android:textSize="10sp"
        android:textColor="@color/material_blue_grey_950"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/find_ibeacon_button"
        android:text="@string/find_ibeacon_button" />

        <ListView
            android:id="@+id/Items_ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/refresh_button"
            />

</LinearLayout>


</ScrollView>